Improving the Java layer compatibility with Java8/JDK1.8. The logging is now fully controlled by external logback.xml.